# agile-calculator

./: .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pull-request.sh  pyproject.toml  requirements.txt
.gemini/: settings.json
.gemini/commands/: plan.toml  specify.toml  tasks.toml
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: design_doc.md  feature_request.md
.github/workflows/: PR.yml  ci.yml  e2e.yml  run_from_comment.yml
agile_calculator/: cli.py
agile_calculator/extractors/: base_extractor.py  github_extractor.py  jira_extractor.py
agile_calculator/extractors/github/: pull_request_extractor.py
agile_calculator/initializers/: github_initializer.py
agile_calculator/interfaces/: github_interface.py
agile_calculator/loaders/: matplotlib_loader.py
agile_calculator/records/: base_record.py  comment_base.py  extracted_record.py  lead_time_for_changes_record.py  pull_request_base.py  pull_request_record.py  transformed_record.py
agile_calculator/records/extracted/: comment_record.py  jira_issue_record.py  pull_request_record.py
agile_calculator/records/transformed/: approval_count_record.py  lead_time_for_changes_record.py  pull_request_changed_lines_record.py  pull_request_cycle_time_record.py  pull_request_detail_record.py  pull_request_details_record.py  pull_request_merged_count_record.py  pull_request_review_comments_record.py  review_comments_record.py
agile_calculator/tasks/extractors/: github_extractor.py  jira_extractor.py
agile_calculator/tasks/loaders/: base_loader.py  csv_loader.py  matplotlib_loader.py  pie_chart_loader.py
agile_calculator/tasks/transformers/: base_transformer.py  comment_details_transformer.py  lead_time_for_changes_transformer.py  passthrough_transformer.py  pull_request_approval_transformer.py  (+6 more)
agile_calculator/transformers/: lead_time_for_changes_transformer.py
agile_calculator/workflows/: extracting_workflow.py  github_workflow.py  lead_time_for_changes_workflow.py  pull_request_workflow.py  review_comments_workflow.py  root_workflow.py
src/agile_calculator/: cli.py
tests/: conftest.py  test_cli.py  test_data_processor.py  test_github_client.py  test_jira_client.py  test_placeholder.py
tests/extractors/: test_github_extractor.py  test_jira_extractor.py
tests/extracts/: test_github_client.py  test_github_extract.py  test_jira_client.py  test_jira_extract.py
tests/loaders/: test_matplotlib_loader.py
tests/transformers/: test_lead_time_for_changes_transformer.py
tests/workflows/: test_extracting_workflow.py  test_lead_time_for_changes_workflow.py
(+59 files in other folders)
