[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-calculator"
version = "0.0.1"
authors = [
  { name="YOUR NAME", email="you@example.com" },
]
description = "A package for agile development cycle analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jupyterlab",
    "pandas",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/agile-calculator"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/agile-calculator/issues"
