[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-calculator"
version = "0.0.1"
authors = [
  { name="YOUR NAME", email="you@example.com" },
]
description = "A package for agile development cycle analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipython==8.34.0",
    "jupyterlab==4.4.5",
    "pandas==2.3.1",
    "matplotlib==3.10.3",
    "pytest==8.4.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "PyGithub==2.6.1",
    "jira==3.8.0",
    "uv==0.8.3",
    "ruff==0.12.5",
    "ty>=0.0.1a16",
    "fire>=0.7.0",
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/agile-calculator"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/agile-calculator/issues"

[project.scripts]
agile-calculator = "agile_calculator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["agile_calculator"]

# Ruff Linter & Formatter Configuration
[tool.ruff]
# Pythonの対象バージョン
target-version = "py311"

[tool.ruff.lint]
# 有効にするルールセットを選択
# "F": Pyflakes, "E": pycodestyle Error, "W": pycodestyle Warning, "I": isort, "N": pep8-naming
select = ["E", "F", "W", "I", "N"]

# 無視するルール (例: E501はフォーマッターが処理するため無視)
ignore = ["E501"]

# 除外するディレクトリ
exclude = [
 "tests/*"
]

[tool.ruff.format]
# Black互換のフォーマットを有効にする
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
root = ["."]
python = "/home/jules/.pyenv/versions/3.12.11/bin/python"

[tool.ty.src]
include = ["./agile_calculator/**"]
